--- a/views/userViews/orderList.hbs
+++ b/views/userViews/orderList.hbs
@@ -467,8 +467,8 @@
                                     <td><a target="_blank">-</a></td>
                                     <td>{{this.paymentType}}</td>
                                     <td><a href="/account/orderList/orderStatus/{{this._id}}" class="btn btn-primary btn-sm">view status</a></td>
-                                    <td>${{this.grandTotalCost}}</td>
-                                    <td data-value="78025368997">{{this.orderDate}}</td>
+                                    <td>₹{{this.grandTotalCost}}</td>
+                                    <td data-value="78025368997">{{this.orderDateFormatted}}</td>
                                     <td data-value="3"><span class="label label-primary">{{this.orderStatus}}</span>
                                     </td>
                                 </tr>
