--- a/views/userViews/orderPlacedPage.hbs
+++ b/views/userViews/orderPlacedPage.hbs
@@ -263,7 +263,7 @@
                     <span class="cartRespons colorWhite"> Cart (₹210.00) </span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" alt="LF-Kart" style="width: 115px; height: 50px" />
+                    <img src="/images/logo.png" alt="LF-Kart" style="width: 115px; height: 50px" />
                 </a>
 
                 <!-- this part for mobile -->
@@ -780,36 +780,36 @@
 ================================================== -->
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery/jquery-2.1.3.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/jquery/jquery-2.1.3.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
     <!-- include  parallax plugin -->
-    <script type="text/javascript" src="assets/js/jquery.parallax-1.1.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.parallax-1.1.js"></script>
 
     <!-- optionally include helper plugins -->
-    <script type="text/javascript" src="assets/js/helper-plugins/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="/assets/js/helper-plugins/jquery.mousewheel.min.js"></script>
 
     <!-- include mCustomScrollbar plugin //Custom Scrollbar  -->
 
-    <script type="text/javascript" src="assets/js/jquery.mCustomScrollbar.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.mCustomScrollbar.js"></script>
 
     <!-- include icheck plugin // customized checkboxes and radio buttons   -->
-    <script type="text/javascript" src="assets/plugins/icheck-1.x/icheck.min.js"></script>
+    <script type="text/javascript" src="/assets/plugins/icheck-1.x/icheck.min.js"></script>
 
     <!-- include grid.js // for equal Div height  -->
-    <script src="assets/plugins/jquery-match-height-master/dist/jquery.matchHeight-min.js"></script>
-    <script src="assets/js/grids.js"></script>
+    <script src="/assets/plugins/jquery-match-height-master/dist/jquery.matchHeight-min.js"></script>
+    <script src="/assets/js/grids.js"></script>
 
     <!-- include carousel slider plugin  -->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
     <!-- jQuery select2 // custom select   -->
     <script src="../../../../cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
 
     <!-- include touchspin.js // touch friendly input spinner component   -->
-    <script src="assets/js/bootstrap.touchspin.js"></script>
+    <script src="/assets/js/bootstrap.touchspin.js"></script>
 
     <!-- include custom script for site  -->
-    <script src="assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 
 <!-- Mirrored from templatecycle.com/tshop/v6/gray/thanks-for-order.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 06:55:40 GMT -->
