--- a/views/adminViews/productOfferManagement.hbs
+++ b/views/adminViews/productOfferManagement.hbs
@@ -191,7 +191,7 @@
                             <label class="container">
                                 <label for="productName" class="mb-2">Product Name:</label>
                                 <select name="productName" id="productName{{@index}}" class="form-select"
-                                    aria-label="Default select example">
+                                    aria-label="Default select example" disabled>
                                     {{!-- iterating all the names of the products available in LFKart  --}}
                                     {{#each ../productData}}
 
