--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -1,62 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
-</head>
-<body>
-
-
-<div class="container">
-
-    <nav class="navbar navbar-expand-lg bg-info bg-primary">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand fw-bold" href="/admin"><img src="/images/logo-dark.png" alt="LFKart"></a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/userManagement">Users</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link active" aria-current="page" href="/admin/bannerManagement">Banner</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/categoryManagement">Categories</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/orderManagement">Orders</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/couponManagement">Coupons</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/productOfferManagement">Product
-                            Offers</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/salesReport">Sales Report</a>
-                    </li>
-                </ul>
-                <form action="logout" method="post" class="d-flex">
-                    <button class="btn btn-danger" type="submit">Logout</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+{{> adminHeader}}
 
     <div class="container pt-3">
         <div class="row">
@@ -124,30 +66,6 @@
 </div>
 
 <allScripts>
-    {{!-- display image --}}
-    <script>
-        function displayImage() {
-            const reader = new FileReader()
-            reader.onload = () => {
-                previewBannerImg.src = reader.result
-            }
-            const file = document.querySelector("#bannerImage").files[0];
-            if (file) {
-                previewBannerImg.style.display = 'block'
-                reader.readAsDataURL(file)
-            }
-        }
-    </script>
-
-    <script src="/extras/cropper.js"></script>
-
-    <script>
-        const previewBannerImgElement = document.getElementById('previewBannerImg');
-        const cropper = new Cropper(previewBannerImgElement, {
-            aspectRatio: 0,
-            viewMode: 0
-        });
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -245,5 +163,4 @@
 
 </allScripts>
 
-</body>
-</html>
+{{> adminFooter}}
