--- a/views/adminViews/orderStatus.hbs
+++ b/views/adminViews/orderStatus.hbs
@@ -1,51 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body class="container">
-
-    <nav class="navbar navbar-expand-lg bg-info bg-primary">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand fw-bold" href="/admin"><img src="/images/logo-dark.png" alt="LFKart"></a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/userManagement">User Management</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/categoryManagement">Categories</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link active" aria-current="page" href="/admin/orders">Orders</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/SalesReport">Sales Report</a>
-                    </li>
-                </ul>
-                <form action="logout" method="post" class="d-flex">
-                    <button class="btn btn-danger" type="submit">Logout</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+{{> adminHeader}}
 
     <div class="container p-3">
         <h1><strong>ORDER STATUS</strong></h1>
@@ -121,22 +74,10 @@
     </div>
 
 
-</body>
+
 
 <allScripts>
-    {{!-- jquery --}}
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
-    {{!-- datatables.net --}}
-    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
-
-    {{!-- Table details --}}
     <script>
         $(document).ready(function () {
             $(' orderStatus').DataTable();
@@ -145,4 +86,4 @@
 
 </allScripts>
 
-</html>
+{{> adminFooter}}
