--- a/views/adminViews/productOfferManagement.hbs
+++ b/views/adminViews/productOfferManagement.hbs
@@ -1,71 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- bootstap 5.3.2 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- jquery- datatables -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-    {{!-- jquery --}}
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    {{!-- jquery form validation --}}
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
-    {{!-- sweetalert2 --}}
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-</head>
-
-<body class="container">
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-info bg-primary">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand fw-bold" href="/admin"><img src="/images/logo-dark.png" alt="LFKart"></a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/userManagement">Users</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link active" aria-current="page" href="/admin/bannerManagement">Banner</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/categoryManagement">Categories</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/productManagement">Products</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/orderManagement">Orders</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/couponManagement">Coupons</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link active" aria-current="page" href="/admin/productOfferManagement">Product
-                            Offers</a>
-                    </li>
-                    <li class="nav-item fw-bold">
-                        <a class="nav-link" aria-current="page" href="/admin/salesReport">Sales Report</a>
-                    </li>
-                </ul>
-                <form action="logout" method="post" class="d-flex">
-                    <button class="btn btn-danger" type="submit">Logout</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+{{> adminHeader}}
 
     <!-- Add Product Offer Button (Triggers modal) -->
     <div class="pt-3">
@@ -323,8 +256,6 @@
     </script>
     {{/each}}
 
-</body>
-
 {{!-- js libraries --}}
 <Libraries>
     <!-- Bootstrap JS -->
@@ -434,4 +365,4 @@
 
 </allScripts>
 
-</html>
+{{> adminFooter}}
